Slides 10: Add pid control images

--- a/teoricas/teorica_10/src/motor_control.tex
+++ b/teoricas/teorica_10/src/motor_control.tex
@@ -79,12 +79,14 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Motores DC}
+    \frametitle{Proportional control}
     \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
     
     \begin{itemize}
-        \item 
+        \item P-Control: $\controlCommand_{t} = K_{p} e_{t}$ con  $K_{p} = 1$
     \end{itemize}
+    
+    \TODO{\url{https://www.zhinst.com/americas/de/resources/principles-of-pid-controllers}}
     
 \end{frame}
 
