--- a/tps/tp2/tp2.tex
+++ b/tps/tp2/tp2.tex
@@ -126,7 +126,7 @@ resulta demasiado agresivo)
 	Los límites de velocidad y los parámetros cinemáticos (el radio de la rueda R y la distancia entre ruedas b) de los diferentes modelos del robot TurtleBot3 se obtienen de las especificaciones\footnote{\url{https://emanual.robotis.com/docs/en/platform/turtlebot3/features/}}.
 \end{nota}
 
-\ejercicio  Calcular la velocidad lineal y angular para que el robot realice un camino circular con un radio a elección entre \SI{0.5}{\meter} y \SI{1.5}{\meter}.
+\ejercicio  Calcular la velocidad lineal y angular para que el robot realice un camino circular con radio de \SI{1}{\meter}.
 
 \ejercicio  Calcular las velocidades lineales y angulares de las ruedas (izquierda y derecha) del robot para el camino circular del punto anterior.
 
