--- a/tps/tp3/tp3.tex
+++ b/tps/tp3/tp3.tex
@@ -103,7 +103,7 @@ Utilizar el dataset EuRoC\footnote{\url{https://projects.asl.ethz.ch/datasets/do
 
 \item \textbf{Extraer Feaures Visuales: Keypoints y descriptores}
 
-Selecionar un detector de keypoints (FAST, ORB, SIFT, SURF, GFTT, BRISK, etc.) y un descriptor (BRIEF, ORB, BRISK, etc.), y extraer features en ambas imágenes.
+Selecionar un detector de keypoints (FAST, ORB, SIFT, SURF, GFTT, BRISK, etc.) y un descriptor (BRIEF, ORB, BRISK, etc.), y extraer features en ambas imágenes. Visualizar una imagen izquierda y derecha con los features extraídos.
 
 \item \textbf{Buscar correspondencias visuales}
 
