Slide 10: Add teoricas/teorica_10/images/temperature_feedback_control images

--- a/teoricas/teorica_10/src/motor_control.tex
+++ b/teoricas/teorica_10/src/motor_control.tex
@@ -62,9 +62,10 @@
     \frametitle{Ejemplo de Feedback control}
     \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
     
-    \begin{itemize}
-        \item \TODO{Ejemplo de ducha}
-    \end{itemize}
+    \begin{center}
+        \includegraphics[width=0.6\columnwidth,valign=m]{images/temperature_feedback_control.pdf}
+    \end{center}
+
     
 \end{frame}
 
