Add PID control images

--- a/teoricas/teorica_10/src/motor_control.tex
+++ b/teoricas/teorica_10/src/motor_control.tex
@@ -80,6 +80,20 @@
 \end{frame}
 
 \begin{frame}
+    \frametitle{On-Off control}
+    \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
+    
+    \begin{center}
+        \includegraphics[width=0.8\columnwidth]{images/pid_control_on_off.pdf}
+    \end{center}
+    
+    \note{Información extraída dehttps://www.zhinst.com/americas/de/resources/principles-of-pid-controllers}
+    
+    \note{Información extraída de https://newton.ex.ac.uk/teaching/CDHW/Feedback/ControlTypes.html}
+    
+\end{frame}
+
+\begin{frame}
     \frametitle{Proportional control}
     \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
     
@@ -87,9 +101,49 @@
         \item P-Control: $\controlCommand_{t} = K_{p} e_{t}$ con  $K_{p} = 1$
     \end{itemize}
     
-    \TODO{\url{https://www.zhinst.com/americas/de/resources/principles-of-pid-controllers}}
+    \begin{center}
+        \includegraphics[width=0.8\columnwidth]{images/pid_control_proportional.pdf}
+    \end{center}
+    
+    \note{Información extraída dehttps://www.zhinst.com/americas/de/resources/principles-of-pid-controllers}
+    \note{Información extraída de https://newton.ex.ac.uk/teaching/CDHW/Feedback/ControlTypes.html}
     
 \end{frame}
+
+\begin{frame}
+    \frametitle{Proportional+Derivative control}
+    \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
+    
+    \begin{itemize}
+        \item PD-Control: $\controlCommand_{t} = K_{p} e_{t}$ con  $K_{p} = 1$
+    \end{itemize}
+    
+    \begin{center}
+        \includegraphics[width=0.8\columnwidth]{images/pid_control_derivative.pdf}
+    \end{center}
+    
+    \note{Información extraída dehttps://www.zhinst.com/americas/de/resources/principles-of-pid-controllers}
+    \note{Información extraída de https://newton.ex.ac.uk/teaching/CDHW/Feedback/ControlTypes.html}
+    
+\end{frame}
+
+\begin{frame}
+    \frametitle{Proportional+Integral+Derivative control}
+    \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
+    
+    \begin{itemize}
+        \item PID-Control: $\controlCommand_{t} = K_{p} e_{t}$ con  $K_{p} = 1$
+    \end{itemize}
+    
+    \begin{center}
+        \includegraphics[width=0.8\columnwidth]{images/pid_control_integral.pdf}
+    \end{center}
+    
+    \note{Información extraída dehttps://www.zhinst.com/americas/de/resources/principles-of-pid-controllers}
+    \note{Información extraída de https://newton.ex.ac.uk/teaching/CDHW/Feedback/ControlTypes.html}
+    
+\end{frame}
+
 
 \begin{frame}
     \frametitle{Motores DC}
