Slides 10: Improve PID control images

--- a/teoricas/teorica_10/src/motor_control.tex
+++ b/teoricas/teorica_10/src/motor_control.tex
@@ -122,6 +122,8 @@
         \includegraphics[width=0.8\columnwidth]{images/pid_control_derivative.pdf}
     \end{center}
     
+    Un damping (amortiguación) demasiado pequeña produce overshoot y ringing, demasiado grande provoca una respuesta innecesariamente lenta.
+    
     \note{Información extraída dehttps://www.zhinst.com/americas/de/resources/principles-of-pid-controllers}
     \note{Información extraída de https://newton.ex.ac.uk/teaching/CDHW/Feedback/ControlTypes.html}
     
