--- a/teoricas/teorica_10/src/motor_control.tex
+++ b/teoricas/teorica_10/src/motor_control.tex
@@ -275,6 +275,9 @@
         \includegraphics[width=0.8\columnwidth]{images/control_architecture2.pdf}
     \end{center}
     
+     \note{Percepción: a través de los sensores armar un mapa del entorno}
+     \note{Trayectoria = camino +perfil de velocidades. En cada pose del camino debemos saber con qué velocidad tenemos que llegar. Que cada punto de la trayectoria tenga un perfil de velocidad permite que el robot pueda moverse de manera suave de una pose a la otra.}
+     \note{El control se divide en dos partes: longitudinal y lateral. El control Longitudinal hace referencia sobre la dirección de movimiento, es decir controlar la velocidad lineal. El control Lateral hace referencia que el robot este cerca del camino a seguir.}
 \end{frame}
 
 \begin{frame}
