Add Ackermann steering image

--- a/teoricas/teorica_10/src/motor_control.tex
+++ b/teoricas/teorica_10/src/motor_control.tex
@@ -281,11 +281,24 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Motores DC}
+    \frametitle{Generación de trayectorias}
     \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
     
-    \begin{itemize}
-        \item 
-    \end{itemize}
+    \begin{center}
+        \includegraphics[width=0.6\columnwidth]{images/trajectory_generation.pdf}
+    \end{center}
     
 \end{frame}
+
+\begin{frame}
+    \frametitle{Ackermann Steering}
+    \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
+    
+    \begin{center}
+        \includegraphics[width=0.6\columnwidth]{images/ackermann_steering.pdf}
+    \end{center}
+    
+\end{frame}
+
+
+
