Slides 10: Add longitudinal_control image

--- a/teoricas/teorica_10/src/motor_control.tex
+++ b/teoricas/teorica_10/src/motor_control.tex
@@ -332,5 +332,44 @@
     
 \end{frame}
 
+\begin{frame}
+    \frametitle{Longitudinal Control}
+    \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
+        
+    \begin{center}
+        \includegraphics[width=0.6\columnwidth]{images/longitudinal_control.pdf}
+    \end{center}
+    
+    \only<1->{¿Cómo podemos obtener esto?}
+    \only<2->{Control PID}
+    
+\end{frame}
+
+
+\begin{frame}
+    \frametitle{Longitudinal Control}
+    \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
+    
+    \begin{center}
+        \includegraphics[width=0.6\columnwidth]{images/longitudinal_control.pdf}
+    \end{center}
+    
+    \only<1->{¿Cómo podemos obtener esto?}
+    \only<2->{Control PID}
+    
+\end{frame}
+
+\begin{frame}
+    \frametitle{Longitudinal Control}
+    \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
+    
+    \begin{center}
+        \includegraphics[width=0.6\columnwidth]{images/longitudinal_control.pdf}
+    \end{center}
+    
+    \only<1->{¿Cómo podemos obtener esto?}
+    \only<2->{Control PID}
+    
+\end{frame}
 
 
