Slides 10: Add lateral_control image

--- a/teoricas/teorica_10/src/motor_control.tex
+++ b/teoricas/teorica_10/src/motor_control.tex
@@ -347,28 +347,22 @@
 
 
 \begin{frame}
-    \frametitle{Longitudinal Control}
+    \frametitle{Lateral Control}
     \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
     
     \begin{center}
-        \includegraphics[width=0.6\columnwidth]{images/longitudinal_control.pdf}
+        \includegraphics[width=0.6\columnwidth]{images/lateral_control.pdf}
     \end{center}
-    
-    \only<1->{¿Cómo podemos obtener esto?}
-    \only<2->{Control PID}
-    
+
 \end{frame}
 
 \begin{frame}
-    \frametitle{Longitudinal Control}
+    \frametitle{Control en cascada}
     \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
     
     \begin{center}
-        \includegraphics[width=0.6\columnwidth]{images/longitudinal_control.pdf}
+        \includegraphics[width=0.7\columnwidth]{./images/control_architecture.pdf}
     \end{center}
-    
-    \only<1->{¿Cómo podemos obtener esto?}
-    \only<2->{Control PID}
     
 \end{frame}
 
