Slides 10: Add some bibliography

--- a/teoricas/teorica_10/src/bibliography.tex
+++ b/teoricas/teorica_10/src/bibliography.tex
@@ -4,14 +4,16 @@
     \begin{itemize}
         \item Robot Control (Nived Chebrolu):        : \url{https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
         \item Self-Driving Cars: Control (Nived Chebrolu): \url{https://youtu.be/XmjjmnDcduU?si=690is9yo5jURrF0R}
-        \item curso: CS373 Udacity Programming a Robotic Car
+        \item Curso: CS373 Udacity Programming a Robotic Car
+        \item Curso: Visual Navigation for Flying Robots  (J{\"u}rgen Sturm)
+        \item Control for Mobile robots (Magnus Egerstedt)
     \end{itemize}
     
 \end{frame}
 
 \begin{frame}
 	\frametitle{Bibliografía}
-	\nocite{hartley2003multiple}
+	\nocite{corke2017robotics}
 	
 	\printbibliography
 	
